--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ ul li a {
     text-decoration: none;
 }
 
-.background {
+/* .background {
     background-color: #d9c5b2;
     margin: 0;
     width: 100%;
@@ -60,6 +60,18 @@ ul li a {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    column-gap: 10px;
+    padding: 10px;
+} */
+
+.background {
+    background-color: #d9c5b2;
+    margin: 0px;
+    width: 100%;
+    height: calc(100vh - 75px);
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto;
     column-gap: 10px;
     padding: 10px;
 }
@@ -71,7 +83,6 @@ ul li a {
 .micro {
     transition: box-shadow 0.3s ease;
     background-color: #7e7f83;
-    width: calc(100vw / 4);
     overflow: auto;
     border-radius: 10px;
     height: calc(100vh - 95px);
@@ -339,19 +350,14 @@ form {
         font-size: small;
     }
     .background {
-        display: flex;
-        justify-content: center;
-        width: 100%;
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto;
+        row-gap: 10px;
         height: auto;
-        flex-wrap: wrap;
     }
     .micro {
-        width: calc(100vw / 3);
         height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 10px;
     }
     .inferior {
         display: flex;
@@ -418,19 +424,14 @@ form {
         font-size: small;
     }
     .background {
-        display: flex;
-        justify-content: center;
-        width: 100%;
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        row-gap: 10px;
         height: auto;
-        flex-wrap: wrap;
     }
     .micro {
-        width: calc(100vw / 3);
         height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        margin: 10px;
     }
     .inferior {
         display: flex;
