--- a/styles/style.css
+++ b/styles/style.css
@@ -66,14 +66,15 @@ ul li a {
 
 .background {
     background-color: #d9c5b2;
-    margin: 0px;
+    /* margin: 0px; */
     width: 100%;
     height: calc(100vh - 75px);
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto;
-    column-gap: 10px;
-    padding: 10px;
+    row-gap: 1rem;
+    /* grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto; */
+    /* column-gap: 10px; */
+    padding: 1rem;
 }
 
 .mainmedia {
@@ -85,7 +86,7 @@ ul li a {
     background-color: #7e7f83;
     overflow: auto;
     border-radius: 10px;
-    height: calc(100vh - 95px);
+    height: calc(100vh - 75px - 2rem);
     margin-top: 0px;
     display: flex;
     flex-wrap: wrap;
@@ -486,5 +487,15 @@ form {
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .background {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        row-gap: 10px;
+        height: auto;
     }
 }
