--- a/styles/style.css
+++ b/styles/style.css
@@ -176,34 +176,29 @@ footer {
     color: #34312d;
     height: 200px;
     padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .equipo {
     background-color: #d9c5b2;
     font-family: Arial, Helvetica, sans-serif;
     color: #34312d;
-    height: calc(100vh - 275px);
-    padding-top: 10px;
+    height: calc(100vh - 75px);
+    width: 100%;
 }
 
 #equipo__titulo {
     margin-left: 10px;
+    text-align: center;
 }
 
 .equipo__miembro {
     transition: box-shadow 0.3s ease;
     background-color: #7e7f83;
-    width: calc(100vw / 4 - 12.5px);
-    height: calc(100vh - 325px);
-    display: inline-block;
     border-radius: 10px;
-    margin-top: 5px;
-    margin-left: 2.5px;
-    margin-right: 2.5px;
-    position: relative;
-    bottom: 0px;
-    overflow: auto;
-    padding: 10px;
+    height: calc(100vh - 350px);
 }
 
 #background__trabajos {
@@ -371,7 +366,7 @@ form {
         height: auto;
         padding-top: 10px;
     }
-    .equipo__miembro {
+    /* .equipo__miembro {
         width: calc(100vw / 2);
         height: calc(100vh - 325px);
         display: inline-block;
@@ -384,7 +379,7 @@ form {
         transform: translateX(-100%);
         bottom: 0px;
         overflow: auto;
-    }
+    } */
     #background__trabajos {
         display: grid;
         grid-template-columns: auto;
@@ -441,11 +436,11 @@ form {
         height: 200px;
         font-size: small;
     }
-    .equipo {
+    /* .equipo {
         height: auto;
         padding-top: 10px;
-    }
-    .equipo__miembro {
+    } */
+    /* .equipo__miembro {
         width: calc(100vw / 3);
         height: calc(100vh - 325px);
         display: inline-block;
@@ -458,7 +453,7 @@ form {
         transform: translateX(-100%);
         bottom: 0px;
         overflow: auto;
-    }
+    } */
     #background__trabajos {
         display: grid;
         grid-template-columns: auto;
