--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ ul li a {
 .background, .equipo {
   background-color: #d9c5b2;
   width: 100%;
-  height: calc(100vh - 75px);
+  height: auto;
   padding: 0.5rem;
 }
 
@@ -83,7 +83,6 @@ ul li a {
   background-color: #7e7f83;
   overflow: auto;
   border-radius: 10px;
-  height: calc(100vh - 75px - 2rem);
   margin-top: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -137,6 +136,7 @@ ul li a {
 .micro__redes {
   height: 25px;
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 footer {
@@ -145,7 +145,6 @@ footer {
 
 .inferior {
   height: 75px;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -153,39 +152,36 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-column-gap: 10px;
           column-gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 25px;
 }
 
 .inferior__logo {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  left: 25px;
   height: 30px;
 }
 
 .inferior__texto {
   color: #d9c5b2;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 25px;
 }
 
 .inferior__email {
   color: #d9c5b2;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
+  margin: 25px;
 }
 
 .redes {
   width: 30px;
+  margin: 0px 5px 0px 5px;
 }
 
 .historia {
@@ -236,6 +232,23 @@ footer {
 .equipo__miembro:hover {
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.equipo__miembro__nombre {
+  margin: 10px;
+}
+
+.equipo__miembro__id {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+
+.equipo__miembro__intro {
+  margin: 10px;
 }
 
 #background__trabajos, #background__productos {
@@ -443,10 +456,10 @@ form {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    height: 200px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 150px;
     font-size: small;
   }
   .equipo {
@@ -534,10 +547,10 @@ form {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    height: 200px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 150px;
     font-size: small;
   }
   .equipo {
@@ -598,6 +611,22 @@ form {
         grid-template-rows: auto auto;
     row-gap: 10px;
     height: auto;
+  }
+  .inferior {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 150px;
   }
   .equipo {
     display: -ms-grid;
