--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,7 @@ header {
 }
 
 .principal {
-    height: 75px;
+    height: 100px;
     position: relative;
 }
 
@@ -43,7 +43,7 @@ header {
 .menusuperior {
     display: flex;
     flex-direction: row;
-    height: 75px;
+    height: 100px;
     justify-content: flex-end;
     column-gap: 15px;
     align-items: center;
@@ -67,10 +67,6 @@ ul {
     width: 100%;
     height: auto;
     padding: 0.5rem;
-}
-
-.mainmedia {
-    display: none;
 }
 
 .micro {
@@ -130,7 +126,7 @@ footer {
 }
 
 .inferior {
-    height: 75px;
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -166,6 +162,7 @@ footer {
     color: #34312d;
     height: 200px;
     padding: 10px;
+    text-align: center;
 }
 
 .equipo {
@@ -175,6 +172,7 @@ footer {
 
 #equipo__titulo {
     margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #34312d;
@@ -211,8 +209,8 @@ footer {
     background-color: $background;
     margin: 0;
     width: 100%;
-    padding-top: 10px;
-    height: calc(100vh - 75px);
+    padding: 10px;
+    height: auto;
 }
 
 .trabajos {
@@ -284,17 +282,25 @@ footer {
     margin: 10px;
 }
 
+.productos__precio__consulta {
+    color: $typeCard;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    margin: 10px;
+}
+
 .productos__boton {
     margin: 10px;
     background-color: #34312d;
     color: #d9c5b2;
-    height: 20px;
-    border-radius: 5px;
+    height: 40px;
+    border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #background__contacto {
-    background-color: $background;
+    background-image: url("../assets/images/bg/bg-form.png");
+    background-size: auto;
     margin: 0;
     width: 100%;
     display: flex;
@@ -303,7 +309,6 @@ footer {
     align-items: center;
     flex-wrap: wrap;
     height: auto;
-    padding: 1rem;
 }
 
 .form__title {
@@ -315,7 +320,7 @@ footer {
 }
 
 form {
-    background-color: #7e7f83;
+    background-color: rgba($color: #7e7f83, $alpha: 0.5);
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
     padding: 10px;
@@ -329,8 +334,8 @@ form {
 .form__boton {
     background-color: #34312d;
     color: #d9c5b2;
-    height: 20px;
-    border-radius: 5px;
+    height: 40px;
+    border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -359,6 +364,14 @@ form {
         align-items: center;
         height: 150px;
         font-size: small;
+    }
+    .historia {
+        background-color: #7e7f83;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #34312d;
+        height: 300px;
+        padding: 10px;
+        text-align: center;
     }
     .equipo {
         height: auto;
@@ -413,6 +426,14 @@ form {
         align-items: center;
         height: 150px;
         font-size: small;
+    }
+    .historia {
+        background-color: #7e7f83;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #34312d;
+        height: 300px;
+        padding: 10px;
+        text-align: center;
     }
     .equipo {
         height: auto;
