--- a/styles/style.css
+++ b/styles/style.css
@@ -471,7 +471,7 @@ form {
     background-color: #7e7f83;
     font-family: Arial, Helvetica, sans-serif;
     color: #34312d;
-    height: 300px;
+    height: 400px;
     padding: 10px;
     text-align: center;
   }
@@ -494,6 +494,109 @@ form {
         grid-template-columns: auto;
     -ms-grid-rows: auto auto auto auto auto auto;
         grid-template-rows: auto auto auto auto auto auto;
+  }
+  #background__contacto {
+    background-color: #d9c5b2;
+    margin: 0;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: auto;
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .menusuperior {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    font-size: small;
+  }
+  .background, .equipo {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+    row-gap: 10px;
+    height: auto;
+  }
+  .micro {
+    height: auto;
+  }
+  .inferior {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 150px;
+    font-size: small;
+  }
+  .historia {
+    background-color: #7e7f83;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #34312d;
+    height: 375px;
+    padding: 10px;
+    text-align: center;
+  }
+  .equipo {
+    height: auto;
+    padding-top: 10px;
+  }
+  #background__trabajos, #background__productos {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+    row-gap: 10px;
+    height: auto;
+  }
+  #background__productos {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-grid-rows: auto auto auto;
+        grid-template-rows: auto auto auto;
+    row-gap: 10px;
+    height: auto;
   }
   #background__contacto {
     background-color: #d9c5b2;
@@ -570,7 +673,7 @@ form {
     background-color: #7e7f83;
     font-family: Arial, Helvetica, sans-serif;
     color: #34312d;
-    height: 300px;
+    height: 375px;
     padding: 10px;
     text-align: center;
   }
