--- a/styles/style.scss
+++ b/styles/style.scss
@@ -369,7 +369,7 @@ form {
         background-color: #7e7f83;
         font-family: Arial, Helvetica, sans-serif;
         color: #34312d;
-        height: 300px;
+        height: 400px;
         padding: 10px;
         text-align: center;
     }
@@ -386,6 +386,72 @@ form {
         display: grid;
         grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto auto;
+    }
+    #background__contacto {
+        background-color: $background;
+        margin: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        height: auto;
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .menusuperior {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-end;
+        font-size: small;
+    }
+    .background {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        row-gap: 10px;
+        height: auto;
+    }
+    .micro {
+        height: auto;
+    }
+    .inferior {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 150px;
+        font-size: small;
+    }
+    .historia {
+        background-color: #7e7f83;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #34312d;
+        height: 375px;
+        padding: 10px;
+        text-align: center;
+    }
+    .equipo {
+        height: auto;
+        padding-top: 10px;
+    }
+    #background__trabajos {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto;
+        row-gap: 10px;
+        height: auto;
+    }
+    #background__productos {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+        row-gap: 10px;
+        height: auto;
     }
     #background__contacto {
         background-color: $background;
@@ -431,7 +497,7 @@ form {
         background-color: #7e7f83;
         font-family: Arial, Helvetica, sans-serif;
         color: #34312d;
-        height: 300px;
+        height: 375px;
         padding: 10px;
         text-align: center;
     }
